<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/scrollview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <ImageButton
        android:id="@+id/ib_seleccionar_foto"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:contentDescription="@string/btn_sel_foto"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_imagen"
        app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

    <ImageButton
        android:id="@+id/ib_seleccionar_imag"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:contentDescription="@string/btn_sel_img"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_seleccionar_foto"
        app:srcCompat="@drawable/ic_baseline_image_24" />

    <ImageView
        android:id="@+id/iv_imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="100dp"
        android:adjustViewBounds="true"
        android:layout_margin="12dp"
        android:contentDescription="@string/admmin_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTF_Nombre_Imagen"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:hint="@string/hint_imagen"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/ib_seleccionar_imag"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_subir"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:text="@string/btn_subir_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTF_Nombre_Imagen" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTF_Nombre_Actividad"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:layout_marginTop="64dp"
        android:hint="@string/hint_actividad"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_subir"
        tools:layout_editor_absoluteX="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_subir_actividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="76dp"
        android:text="@string/btn_subir_act"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTF_Nombre_Actividad" />


</androidx.constraintlayout.widget.ConstraintLayout>