<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_usuario"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tilNombre"
        app:layout_constraintEnd_toEndOf="@+id/tilNombre"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tilNombre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPassw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_passw"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tilPassw"
        app:layout_constraintEnd_toEndOf="@+id/tilPassw"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tilPassw"
        app:layout_constraintTop_toBottomOf="@+id/tilNombre" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPassw"
        app:layout_constraintEnd_toEndOf="@+id/textViewPassw"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textViewPassw"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_usuario" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassw"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/buttonEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassw">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titePassw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_passw"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>