<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutPerfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentPerfil">

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prf_nombre"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tilNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prf_apellidos"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tilApellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNombre"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textViewEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prf_fecha_ent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tilEntrada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilApellidos"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textViewSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prf_fecha_sal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tilSalida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEntrada"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewApellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prf_nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewEntrada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewApellidos"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prf_apellidos" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/textViewSalida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEntrada"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prf_fecha_ent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSalida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSalida"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietSalida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prf_fecha_sal" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>